force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/agf__ADM_Third_Party_Software__c.object-meta.xml
<CustomObject>
    <label>Third Party Software</label>
    <nameField>
        <label>Third Party Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>