force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Cloud__c.field-meta.xml
<CustomField>
    <fullName>agf__Cloud__c</fullName>
    <formula>agf__Scrum_Team__r.agf__Cloud_LU__r.Name</formula>
    <label>Cloud</label>
    <type>Text</type>
</CustomField>