force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Does_this_contain_JavaScript__c.field-meta.xml
<CustomField>
    <fullName>agf__Does_this_contain_JavaScript__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does this contain JS or similar code articulated in a client browser? Do portions of the package run in the user’s browser?</inlineHelpText>
    <label>Old does this contain JavaScript?</label>
    <type>Checkbox</type>
</CustomField>