force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Jar_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Jar_Name__c</fullName>
    <label>Jar Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>