force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__License_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Open Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>