force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Notes__c</fullName>
    <inlineHelpText>WIll you distribute the code to anyone outside of our data centers?</inlineHelpText>
    <label>Use Cases/Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>