force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Perforce_Path__c.field-meta.xml
<CustomField>
    <fullName>agf__Perforce_Path__c</fullName>
    <description>Link to Perforce Path or Direct Download Link</description>
    <inlineHelpText>Link to Perforce Path or Direct Download Link</inlineHelpText>
    <label>Source Code Path or URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>