force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Purpose__c.field-meta.xml
<CustomField>
    <fullName>agf__Purpose__c</fullName>
    <inlineHelpText>Please describe what this Third Party Property does and why you want to use it.</inlineHelpText>
    <label>Purpose</label>
    <length>80</length>
    <type>Text</type>
</CustomField>