force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Request_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Request_Sub_Type__c</fullName>
    <label>Request Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>agf__Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Clients</fullName>
            </value>
            <value>
                <fullName>Compiler</fullName>
            </value>
            <value>
                <fullName>Framework</fullName>
            </value>
            <value>
                <fullName>IDE</fullName>
            </value>
            <value>
                <fullName>Other Software</fullName>
            </value>
            <value>
                <fullName>Plug-In</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>