force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Trademarks, Logos and Icons</fullName>
            </value>
            <value>
                <fullName>Fonts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>