force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Request_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>agf__Request_Type_Other__c</fullName>
    <label>Request Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>