force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Build or Release</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Third Party Software</relationshipLabel>
    <relationshipName>Third_Party_Software</relationshipName>
    <type>Lookup</type>
</CustomField>