force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__URL__c.field-meta.xml
<CustomField>
    <fullName>agf__URL__c</fullName>
    <description>Link to product information page.</description>
    <inlineHelpText>Please provide the URL containing information about the Third Party Property.</inlineHelpText>
    <label>Third Party Property product info URL</label>
    <type>Url</type>
</CustomField>