force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Used_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Used_By__c</fullName>
    <label>Used By</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>