force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Vendor__c.field-meta.xml
<CustomField>
    <fullName>agf__Vendor__c</fullName>
    <label>Vendor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>