force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Version__c.field-meta.xml
<CustomField>
    <fullName>agf__Version__c</fullName>
    <label>Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>