force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/fields/agf__Will_you_modify_the_code__c.field-meta.xml
<CustomField>
    <fullName>agf__Will_you_modify_the_code__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will you use the code as-is or will you modify it?</inlineHelpText>
    <label>Old will you modify the code?</label>
    <type>Checkbox</type>
</CustomField>