force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/validationRules/agf__DateApprovalNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__DateApprovalNeeded</fullName>
    <active>true</active>
    <description>Date Approval Needed</description>
    <errorConditionFormula>agf__Date_Approval_Needed_By__c  &lt;  TODAY() + 28</errorConditionFormula>
    <errorDisplayField>agf__Date_Approval_Needed_By__c</errorDisplayField>
    <errorMessage>Date Approval Needed By can not be less than 28 days from today.</errorMessage>
</ValidationRule>