force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/listViews/agf__All.listView-meta.xml
<ListView>
    <fullName>agf__All</fullName>
    <columns>NAME</columns>
    <columns>agf__Version__c</columns>
    <columns>agf__Jar_Name__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <columns>agf__Purpose__c</columns>
    <columns>agf__Used_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>