force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Third_Party_Software__c/listViews/agf__No_owner.listView-meta.xml
<ListView>
    <fullName>agf__No_owner</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>agf__Jar_Name__c</columns>
    <columns>agf__Used_By__c</columns>
    <columns>agf__Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>No owner</label>
</ListView>